--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,20 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:paddingLeft="24dp"
-              android:paddingTop="40dp"
-              android:paddingRight="24dp"
-              android:background="#F1F1F1">
-    <Button
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#F1F1F1">
+    <ScrollView
+            android:id="@+id/tips_layout"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/btn_red"
-            android:layout_marginTop="40dp"
-            android:onClick="onSettingsClicked"
-            android:text="打开辅助功能"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"/>
-</LinearLayout>
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:fadingEdge="none">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="12dp"
+                android:paddingTop="16dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="16dp">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#333"
+                    android:textSize="16sp"
+                    android:text="@string/user_tips"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="#999"
+                    android:text="@string/user_tips_details"/>
+            <TextView
+                    android:id="@+id/label_step1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:lineSpacingExtra="4dp"
+                    android:textSize="14sp"
+                    android:textColor="#333"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tip1"/>
+            <TextView
+                    android:id="@+id/label_step2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:lineSpacingExtra="4dp"
+                    android:textSize="14sp"
+                    android:textColor="#333"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tip2"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@drawable/btn_red"
+                    android:layout_marginTop="16dp"
+                    android:onClick="onSettingsClicked"
+                    android:text="@string/enable_accessibility"
+                    android:textSize="18sp"
+                    android:textColor="@android:color/white"/>
+        </LinearLayout>
+    </ScrollView>
+    <FrameLayout
+            android:id="@+id/normal_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:paddingLeft="12dp"
+            android:paddingTop="16dp"
+            android:paddingRight="12dp"
+            android:paddingBottom="16dp">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:textSize="16sp"
+                android:textColor="#333"
+                android:lineSpacingExtra="8dp"
+                android:text="@string/running_state"/>
+    </FrameLayout>
+</FrameLayout>
 
