--- a/res/drawable/dialog_bkg.xml
+++ b/res/drawable/dialog_bkg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
+    <solid android:color="@android:color/white"/>
     <corners android:radius="2.0dp"/>
 </shape>
