--- a/LuckyMoney/app/src/main/res/xml/accessible_service_config.xml
+++ b/LuckyMoney/app/src/main/res/xml/accessible_service_config.xml
@@ -2,7 +2,7 @@
 <accessibility-service
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:description="@string/app_name"
-        android:accessibilityEventTypes="typeWindowStateChanged|typeNotificationStateChanged"
+        android:accessibilityEventTypes="typeWindowStateChanged|typeNotificationStateChanged|typeWindowContentChanged"
         android:accessibilityFeedbackType="feedbackAllMask"
         android:packageNames="com.tencent.mm"
         android:notificationTimeout="100"
